--- a/packages/yike-design/src/components/pagination/style/index.scss
+++ b/packages/yike-design/src/components/pagination/style/index.scss
@@ -1,4 +1,6 @@
 @import './variables';
+@import '../../../styles/tokens/color';
+@import '../../../styles/color/color';
 
 @mixin is-disabled() {
   opacity: 0.5;
@@ -44,7 +46,7 @@
     font-size: 14px;
     text-align: center;
     cursor: pointer;
-    background-color: #f0f0f0;
+    background-color: $background-color-4;
     border-radius: 8px;
 
     &--disabled {
@@ -52,13 +54,13 @@
     }
 
     &--selected {
-      color: #fff;
-      background-color: #2b5aed;
+      color: $color-white;
+      background-color: $color-blue;
     }
 
     &--hover {
       &:hover {
-        background-color: #ccc;
+        background-color: $background-color-3;
       }
     }
 
@@ -127,8 +129,8 @@
       width: 90px;
       height: 100%;
       padding: 0 12px;
-      background-color: #f0f0f0;
-      border: 1px solid #f0f0f0;
+      background-color: $background-color-4;
+      border: 1px solid $background-color-4;
       border-radius: 8px;
       transition: all 0.2s ease-in-out;
 
@@ -157,13 +159,13 @@
       }
 
       &:hover {
-        background-color: #f7f7f7;
-        border-color: #2b5aed;
+        background-color: $background-color-2;
+        border-color: $color-blue;
       }
 
       &:focus-within {
-        background-color: #f7f7f7;
-        border-color: #2b5aed;
+        background-color: $background-color-2;
+        border-color: $color-blue;
       }
 
       &__input {
@@ -173,10 +175,6 @@
         border: none;
         outline: none;
         transition: all 0.2s ease;
-
-        &:hover {
-          background-color: #f7f7f7;
-        }
       }
     }
 
