--- a/packages/yike-design/src/components/pagination/PageSize/index.scss
+++ b/packages/yike-design/src/components/pagination/PageSize/index.scss
@@ -1,3 +1,5 @@
+@import '../../../styles/tokens/color';
+
 .yk-pagination-pagesize {
   position: relative;
   height: 36px;
@@ -9,7 +11,7 @@
     height: 100%;
     padding: 0 16px;
     cursor: pointer;
-    background-color: #f0f0f0;
+    background-color: $background-color-4;
     border: none;
     border-radius: 8px;
 
@@ -35,6 +37,7 @@
     z-index: 100;
     box-sizing: border-box;
     padding: 4px;
+    background-color: $background-color-2;
     border-radius: 4px;
     box-shadow: 0 4px 16px 0 rgba(0, 0, 0, 16%);
     opacity: 0;
@@ -49,7 +52,7 @@
       height: 0;
       content: '';
       border: 8px solid transparent;
-      border-bottom: 8px solid #fff;
+      border-bottom: 8px solid $background-color-2;
     }
 
     &__item {
@@ -63,7 +66,7 @@
       border-radius: 4px;
 
       &:hover {
-        background-color: #f0f0f0;
+        background-color: $background-color-3;
       }
     }
   }
